corrected the alignment of names, email, city, state, phone number, dob, was also able to get sort from A-Z to work and the search function to work

--- a/employeedirectory/src/index.css
+++ b/employeedirectory/src/index.css
@@ -17,4 +17,7 @@ code {
 .header {
   background-color: rgb(17,29,67,255);
   color: rgb(240, 237, 229);
+  border-bottom: 5px solid crimson;
+  padding-bottom: 5px;
+
 }
